Create add task ui and updated logo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#F5F8FF</color>
+    <color name="textBg">#c1ecfe</color>
+    <color name="primary">#eaf3fa</color>
     <color name="secondary">#c1e3fd</color>
     <color name="ascent">#1f276f</color>
-    <color name="background">#8b7ffe</color>
+    <color name="ascent2">#8b7ffe</color>
+    <color name="hintColor">#363942</color>
 </resources>
