--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ascent"
+    android:background="@color/darkBlue"
     tools:context=".MainActivity">
 
     <ImageView
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
-        android:textColor="@color/secondary"
+        android:textColor="@color/lightBlue"
         android:text="@string/appName"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
