--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/primary"
         tools:context=".HomeFragment">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -34,11 +35,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/emptyNotesImage"
-            android:visibility="gone"
-            android:src="@drawable/empty_bg"/>
+            android:id="@+id/emptyTaskImage"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/empty_bg"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
