--- a/app/src/main/res/menu/update_task_menu.xml
+++ b/app/src/main/res/menu/update_task_menu.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/deleteMenu"
+        android:icon="@drawable/baseline_delete_forever_24"
         android:title=""
         app:showAsAction="always"/>
 </menu>
