--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -51,7 +51,6 @@
                         android:id="@+id/taskTitle"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:hint="@string/title_for_your_task"
                         android:layout_weight="1"
                         style="@style/editText"
                         android:background="@drawable/edit_text_background"
@@ -78,7 +77,6 @@
                         android:id="@+id/taskDescription"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:hint="@string/des"
                         android:layout_weight="1"
                         style="@style/editText"
                         android:background="@drawable/edit_text_background"
@@ -107,7 +105,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_weight="1"
-                        android:hint="@string/select_date_and_time"
                         style="@style/editText"
                         android:background="@drawable/edit_text_background"
                         android:inputType="text"
@@ -132,14 +129,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="@color/darkBlue"
+            android:backgroundTint="@color/blue"
             android:fontFamily="@font/montserrat_bold"
             android:padding="10dp"
             android:text="@string/create"
             android:textColor="@color/primary"
             android:textSize="16sp"
             android:elevation="20dp"
-            app:cornerRadius="10dp"
+            app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
