--- a/app/src/main/res/layout/fragment_edit_task.xml
+++ b/app/src/main/res/layout/fragment_edit_task.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/titleLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/create_a_new_task"
+                    android:text="Update the Task"
                     android:fontFamily="@font/montserrat_bold"
                     android:textSize="20sp"
                     android:textColor="@color/black"
@@ -132,14 +132,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="@color/darkBlue"
+            android:backgroundTint="@color/blue"
             android:fontFamily="@font/montserrat_bold"
             android:padding="10dp"
             android:text="@string/update"
             android:textColor="@color/primary"
             android:textSize="16sp"
             android:elevation="20dp"
-            app:cornerRadius="10dp"
+            app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
