--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#eaf3fa</color>
+    <color name="primary2">#EAF3Fa</color>
     <color name="lightBlue">#c1e3fd</color>
     <color name="darkBlue">#1f276f</color>
     <color name="purple">#8b7ffe</color>
     <color name="gray">#363942</color>
+    <color name="blue">#166cf7</color>
 </resources>
